update and fixed the footer

--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 		       <section id="summary">
 					<h2> Summary </h2>
 					<p>
-						 Is a hard working, reliable computer science graduate with experience in opening computers and replacing computer components,
-						installing operating systems and using programming languages such as Java, HTML/5, SQL and PHP. Is also a patient individual
-						who possesses a good knowledge of IT including a wide range of IT skills. Other skills include good communication skills,
-						good team work skills as well as good organisational skills.</br>
+						I am a well-organized, self-driven Software Developer Professional with excellent analytical skills.
+						I am keen to monitor the solid trends in programing in order to provide the latest improvements in my work. 
+						My main interests are designing and developing website using ASP, NET, MVC, HTML5 and JavaScript.</br>
 					</P>
 		       </section>-
 
@@ -48,7 +47,6 @@
 		  Software Engineer
 			</p>
 	</footer>
-
 
 </body>
 
